--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/supabase-js": "^2.47.14",
     "@tensorflow-models/blazeface": "^0.1.0",
@@ -25,19 +29,21 @@
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.24",
     "next-themes": "^0.4.1",
     "next-view-transitions": "^0.3.2",
     "openai": "^4.77.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
-    "vaul": "^1.1.1"
+    "vaul": "^1.1.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
