--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
+    "motion-plus": "^0.1.9",
     "next": "15.2.4",
     "next-themes": "^0.4.1",
     "next-view-transitions": "^0.3.4",
