--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/xai": "^1.2.16",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -27,6 +29,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tensorflow-models/blazeface": "^0.1.0",
     "@tensorflow/tfjs": "^4.22.0",
+    "ai": "^4.3.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -44,12 +47,15 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.15",
+    "usehooks-ts": "^3.1.1",
     "uuid": "^11.0.5",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
