--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -48,6 +49,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
+    "react-text-editor-kit": "^2.0.1",
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.0",
