Made huge changes to some code, added new pages and fixed bugs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["convo", "drei", "GLTF", "Scarpins", "womanincloths"]
+  "cSpell.words": [
+    "convo",
+    "drei",
+    "embla",
+    "GLTF",
+    "mixamorig",
+    "Scarpins",
+    "tfjs",
+    "womanincloths"
+  ]
 }
