--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.2.19",
-    "@ai-sdk/react": "^1.2.12",
-    "@ai-sdk/xai": "^1.2.16",
+    "@ai-sdk/google": "^2.0.29",
+    "@ai-sdk/react": "^2.0.89",
     "@hookform/resolvers": "^4.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.2",
@@ -25,13 +26,13 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^10.0.5",
-    "@react-three/fiber": "^9.1.1",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
-    "@tensorflow-models/blazeface": "^0.1.0",
-    "@tensorflow/tfjs": "^4.22.0",
-    "ai": "^4.3.16",
+    "@supabase-cache-helpers/postgrest-react-query": "^1.13.6",
+    "@supabase/postgrest-js": "^2.88.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.88.0",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "ai": "^5.0.89",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -39,9 +40,9 @@
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
     "motion-plus": "^0.1.9",
-    "next": "15.2.4",
+    "next": "^16.0.10",
     "next-themes": "^0.4.1",
-    "next-view-transitions": "^0.3.4",
+    "next-view-transitions": "^0.3.5",
     "react": "19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.1.0",
@@ -50,15 +51,14 @@
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
     "react-text-editor-kit": "^2.0.1",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.175.0",
-    "three-stdlib": "^2.35.15",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
